name:                Walnut
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Reisen
maintainer:          reisen@morphism.org
build-type:          Simple
cabal-version:       >=1.10

executable Walnut
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  RecordWildCards,
                       RankNTypes,
                       GADTs,
                       PatternGuards,
                       ViewPatterns,
                       InstanceSigs,
                       OverloadedStrings

  build-depends:       mtl >=2.2 && <2.3,
                       base >=4.8 && <4.9,
                       text >= 1.2.1 && < 1.2.2,
                       cereal >= 0.5 && < 0.6,
                       bytestring >=0.10 && <0.11,
                       messagepack >=0.5 && <0.6,
                       nanomsg-haskell >=0.2 && <0.3

executable Irc
  main-is:             Irc.hs
  hs-source-dirs:      protocols, src
  default-language:    Haskell2010

  default-extensions:  RecordWildCards,
                       RankNTypes,
                       GADTs,
                       PatternGuards,
                       ViewPatterns,
                       InstanceSigs,
                       OverloadedStrings

  build-depends:       mtl >=2.2 && <2.3,
                       irc >=0.6.1.0 && < 0.6.1.1,
                       base >=4.8 && <4.9,
                       text >= 1.2.1 && < 1.2.2,
                       cereal >= 0.5 && < 0.6,
                       bytestring >=0.10 && <0.11,
                       connection >= 0.2.5 && < 0.2.6,
                       messagepack >=0.5 && <0.6,
                       nanomsg-haskell >=0.2 && <0.3
