name:                   walnut-binary
version:                0.1.0.0
synopsis:               Binary helpers for writing Walnut protocols.
description:            Please see README.md
homepage:               https://github.com/Reisen/Walnut#readme
license:                MIT
license-file:           LICENSE
author:                 Reisen
maintainer:             reisen@morphism.org
copyright:              2016 Reisen
category:               API
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror

  exposed-modules:      Walnut.Binary

  build-depends:        base
                      , aeson
                      , bytestring
                      , mtl
                      , protolude
                      , text
                      , transformers
                      , walnut-core
                      , zeromq4-haskell

  default-extensions:   BangPatterns
                      , FlexibleContexts
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , PatternSynonyms
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeFamilies
                      , ViewPatterns
