name:                   walnut-core
version:                0.1.0.0
synopsis:               Core types and implementation for Walnut.
description:            Please see README.md
homepage:               https://github.com/Reisen/Walnut#readme
license:                MIT
license-file:           LICENSE
author:                 Reisen
maintainer:             reisen@morphism.org
copyright:              2016 Reisen
category:               API
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror
  exposed-modules:      Walnut

  other-modules:        Walnut.Internal.Sources
                      , Walnut.Internal.Mappers

  build-depends:        base
                      , conduit
                      , conduit-extra
                      , mtl
                      , transformers
