name:                   walnut-core
version:                0.1.0.0
synopsis:               Core types and implementation for Walnut.
description:            Please see README.md
homepage:               https://github.com/Reisen/Walnut#readme
license:                MIT
license-file:           LICENSE
author:                 Reisen
maintainer:             reisen@morphism.org
copyright:              2016 Reisen
category:               API
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror

  exposed-modules:      Walnut

  other-modules:        Walnut.Internal.Types
                      , Walnut.Mappers
                      , Walnut.Sink
                      , Walnut.Sources
                      , Walnut.Sources.ZMQ

  build-depends:        base
                      , aeson
                      , bytestring
                      , conduit
                      , conduit-extra
                      , mtl
                      , protolude
                      , text
                      , transformers
                      , zeromq4-haskell

  default-extensions:   BangPatterns
                      , FlexibleContexts
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , PatternSynonyms
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeFamilies
                      , ViewPatterns

test-suite walnut-core-tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
  main-is:              Spec.hs
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  other-modules:        Walnut
                      , Walnut.Internal.Types
                      , Walnut.Mappers
                      , Walnut.Sink
                      , Walnut.Sources
                      , Walnut.Sources.ZMQ

  build-depends:        base
                      , aeson
                      , bytestring
                      , conduit
                      , conduit-extra
                      , hspec
                      , protolude
                      , QuickCheck
                      , walnut-core
                      , zeromq4-haskell

  default-extensions:   BangPatterns
                      , FlexibleContexts
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , PatternSynonyms
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeFamilies
                      , ViewPatterns
